--- a/blog/themes/zola-clean-blog/config.toml
+++ b/blog/themes/zola-clean-blog/config.toml
@@ -21,5 +21,5 @@ clean_blog_menu = [
 ]
 clean_blog_social = [
     {url = "https://twitter.com", icon="fab fa-twitter"},
-    {url = "$BASE_URL/rss.xml", icon="fas fa-rss"}
+    {url = "https://github.com/UTN-GFA", icon="fa-github"}
 ]
